<resources>
    <string name="app_name">Streamline Inventory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventory_logo">Inventory Logo</string>
    <string name="email_address_entry">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="account_question">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fab_info">Adding items</string>
    <string name="add_item">Add Item</string>
    <string name="delete_item_button">Delete item</string>
    <string name="quantity">Quantity</string>
    <string name="edit_item">Edit item</string>
    <string name="add_to_item_quantity_button">Add to item quantity</string>
    <string name="quantity_label">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="reduce_item_button">Reduce item quantity</string>
    <string name="name">Name</string>
    <string name="inventory_title">Inventory</string>
    <string name="id_auto_generated_label">ID (Auto-generated):</string>
    <string name="enter_item_name_hint">Enter Item Name</string>
    <string name="item_name_label">Item Name:</string>
    <string name="item_quantity_label">Item Quantity:</string>
    <string name="enter_quantity_hint">Enter Quantity</string>
    <string name="example_1">1</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="why">why?</string>
    <string name="update_item">Update Item</string>
    <string name="streamline_inventory">Streamline Inventory</string>
    <string name="no_inventory_yet">No inventory yet!\nAdd items to get started</string>
    <string name="sort">sort</string>
</resources>