<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A1A1A1"
    android:backgroundTintMode="src_in">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LayoutActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".LoginActivity">

            <EditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="280dp"
                android:layout_height="49dp"
                android:layout_marginTop="12dp"
                android:autofillHints="Confirm Password"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="280dp"
                android:layout_height="49dp"
                android:layout_marginTop="12dp"
                android:autofillHints="Confirm Password"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@android:drawable/stat_sys_phone_call"
                android:drawablePadding="10dp"
                android:drawableTint="#020202"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_confirm_password" />

            <ImageView
                android:id="@+id/logo_view"
                android:layout_width="293dp"
                android:layout_height="251dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/inventory_logo"
                android:paddingBottom="12dp"
                android:src="@drawable/ic_streamlineinventory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_marginTop="340dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:hint="@string/email_address_entry"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="280dp"
                android:layout_height="49dp"
                android:layout_marginTop="12dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <TextView
                android:id="@+id/account_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:text="@string/account_question"
                app:layout_constraintBaseline_toBaselineOf="@id/register_button"
                app:layout_constraintStart_toStartOf="@+id/login_button"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="4dp"
                android:background="#00FFFFFF"
                android:text="@string/register"
                android:textColor="#3F51B5"
                app:layout_constraintEnd_toEndOf="@+id/login_button"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <Button
                android:id="@+id/why_button"
                android:layout_width="67dp"
                android:layout_height="36dp"
                android:background="#00FFFFFF"
                android:text="@string/why"
                android:textColor="#002F85"
                android:visibility="invisible"
                app:layout_constraintBaseline_toBaselineOf="@id/edit_phone_number"
                app:layout_constraintBottom_toBottomOf="@+id/edit_phone_number"
                app:layout_constraintStart_toEndOf="@+id/edit_phone_number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/streamline_inventory"
                android:textColor="#101010"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/logo_view"
                app:layout_constraintEnd_toEndOf="@+id/logo_view"
                app:layout_constraintStart_toStartOf="@+id/logo_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>